Adding LICENSE (from github)

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ The LAGO CrkTools suite
 
 CODENAME:	SIMS
 COPYRIGHT:	(C) 2012-TODAY The LAGO Project, http://lagoproject.org, lago@lagoproject.org
-LICENCE:    GPLv3 (see gpl-3.0.txt or https://gnu.org/licenses/gpl.html)
+LICENSE:    GPLv3 (see gpl-3.0.txt or https://gnu.org/licenses/gpl.html)
 PHILOSOPHY: Free as in Freedom. All our codes are, and always will be, public and open source
 REPOSITORY: https://github.com/lagoproject
 ORIGINAL:   Hernán Asorey - 2012, asoreyh@cab.cnea.gov.ar (asoreyh@gmail.com)
