Ready to change to ARTI code name

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 The LAGO CrkTools suite
 =======================
 
-CODENAME:	SIMS
+CODENAME:	ARTI
 COPYRIGHT:	(C) 2012-TODAY The LAGO Project, http://lagoproject.org, lago@lagoproject.org
 LICENSE:    GPLv3 (see gpl-3.0.txt or https://gnu.org/licenses/gpl.html)
 PHILOSOPHY: Free as in Freedom. All our codes are, and always will be, public and open source
