Bug in parameters definition corrected from dev-AJRM branch

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ The LAGO ARTI     suite
 =======================
 
 CODENAME:	ARTI
-COPYRIGHT:	(C) 2012-TODAY The LAGO Project, http://lagoproject.org, lago@lagoproject.org
+COPYRIGHT:	(C) 2012-TODAY The LAGO Project, http://lagoproject.net, lago@lagoproject.net
 LICENSE:    BSD-3-Clause
 PHILOSOPHY: Free as in Freedom. All our codes are, and always will be, public and open source
 REPOSITORY: https://github.com/lagoproject
