Minor changes in Readme.md and reference bibtex is updated

--- a/docs/references/arti.bib
+++ b/docs/references/arti.bib
@@ -2,7 +2,7 @@
 	title={The ARTI Framework: Cosmic Rays Atmospheric Background Simulations},
 	author={Sarmiento-Cano, Christian and Su{\'a}rez-Dur{\'a}n, Mauricio and Calder{\'o}n-Ardila, Rolando and V{\'a}squez-Ram{\'\i}rez, Adriana and Jaimes-Motta, Andrei and N{\'u}{\~n}ez, Luis Alberto and Dasso, Sergio and Sidelnik, Iv{\'a}n and Asorey, Hern{\'a}n},
 	journal={European Physics Journal C},
-	volume={submitted},
+	volume={accepted},
 	preprint={arXiv:2010.14591},
 	doi={https://doi.org/10.48550/arXiv.2010.14591},
 	year={2022}
