ARTI paper is published. References updated

--- a/docs/references/arti.bib
+++ b/docs/references/arti.bib
@@ -1,9 +1,11 @@
 @article{sarmiento2020arti,
 	title={The ARTI Framework: Cosmic Rays Atmospheric Background Simulations},
-	author={Sarmiento-Cano, Christian and Su{\'a}rez-Dur{\'a}n, Mauricio and Calder{\'o}n-Ardila, Rolando and V{\'a}squez-Ram{\'\i}rez, Adriana and Jaimes-Motta, Andrei and N{\'u}{\~n}ez, Luis Alberto and Dasso, Sergio and Sidelnik, Iv{\'a}n and Asorey, Hern{\'a}n},
+	author={Sarmiento-Cano, Christian and Su{\'a}rez-Dur{\'a}n, Mauricio and Calder{\'o}n-Ardila, Rolando and V{\'a}squez-Ram{\'\i}rez, Adriana and Jaimes-Motta, Andrei and N{\'u}{\~n}ez, Luis Alberto and Dasso, Sergio and Sidelnik, Iv{\'a}n and Asorey, Hern{\'a}n, {for the {LAGO} Collaboration}},
 	journal={European Physics Journal C},
-	volume={accepted},
+	volume={82},
+	number={1019},
 	preprint={arXiv:2010.14591},
-	doi={https://doi.org/10.48550/arXiv.2010.14591},
+	doi={10.1140/epjc/s10052-022-10883-z},
+	url={https://doi.org/10.1140/epjc/s10052-022-10883-z},
 	year={2022}
 }
